--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,14 +1,5 @@
 ---
-layout: archive
-title: "Portfolio"
+title: "Media"
 permalink: /portfolio/
 author_profile: true
 ---
-
-{% include base_path %}
-
-
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
-
