--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,5 +1,8 @@
 ---
-title: "Media"
+title: "Media coverage"
 permalink: /portfolio/
 author_profile: true
 ---
+
+* [“Hey Siri, can you speak Yorùbá?”](https://www.uclsciencemagazine.com/article-t3v/) by UCL Science Magazine featuring [AfroXLMR paper](https://aclanthology.org/2022.coling-1.382/)
+* [The languages that defy auto-translate on BBC Future featuring](https://www.bbc.com/future/article/20210322-the-languages-that-defy-auto-translate) featuring [MENYO-20k](https://arxiv.org/abs/2103.08647)
