--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,16 +1,26 @@
 ---
-layout: archive
 title: "Talks and presentations"
 permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
-{% endif %}
-
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+<p> - Dec 03, 2022 <a target="_blank" href="https://neurips.cc/virtual/2022/workshop/50006#wse-detail-56285"> Cross-lingual Transfer for Named Entity Recognition: A study on African Languages 
+ </a> at the TL4NLP Workshop @NeurIPS 2022 (Invited talk) </p>
+<p> - Jul 14, 2022 <a target="_blank" href="https://youtu.be/O5hkG9LGy0U?t=5396"> Multilingual Language Model Adaptive Fine-Tuning: A Study on African Languages
+ </a> at the Deeplo Workshop @NAACL 2022 (Invited talk) </p>
+<p> - Jul 11, 2022 <a target="_blank" href="https://underline.io/events/325/sessions/11387/lecture/53889-a-few-thousand-translations-go-a-long-way!-leveraging-pre-trained-models-for-african-news-translation"> A Few Thousand Translations Go a Long Way! Leveraging Pre-trained Models for African News Translation
+ </a> at NAACL 2022 (Oral) </p>
+<p> - Nov 8, 2021 <a target="_blank" href="https://youtu.be/0KrSl90NEJg"> MasakhaNER: Named Entity Recognition for African Languages
+ </a> at EMNLP 2021 (Oral: presented by several authors) </p>
+<p> - Apr 19, 2021 <a target="_blank" href="https://www.youtube.com/watch?v=rRUTv3FrcAA"> MENYO-20k: A Multi-domain English-Yorùbá Corpus for Machine Translation and Domain Adaptation
+ </a> at the AfricaNLP Workshop @EACL 2021 </p>
+<p> - Apr 19, 2021 <a target="_blank" href="https://www.youtube.com/watch?v=h-X6gMz-fjk"> MasakhaNER: Named Entity Recognition for African Languages </a> at the AfricaNLP Workshop @EACL 2021 </p>
+<p> - Mar 26, 2021 <a target="_blank" href="https://www.youtube.com/watch?v=F58M3qojxK4"> MasakhaNER: Named Entity Recognition for African Languages </a> at the LTI Colloquium in CMU </p>
+<p> - Oct 29, 2020 <a target="_blank" href="https://www.youtube.com/watch?v=DHoIUtEJ7oM"> Privacy guarantees for dee identifying text transformation</a> at Interspeech 2020 </p>
+<p> - Sep 23, 2020 <a target="_blank" href="https://www.youtube.com/watch?v=A_9clZ40f1c"> Development of NLP datasets and models for African Languages </a>  at NLP with Friends </p>
+<p> - Jul 7, 2020 <a target="_blank" href="https://dataskeptic.com/blog/episodes/2020/sentiment-preserving-fake-reviews"> Sentiment Preserving Fake Reviews </a> with Data Skeptic </p> 
+<p> - Jul 3, 2020 <a target="_blank" href="https://cloud.dfki.de/owncloud/index.php/s/tZHbPK4F4F4QEWf?path=%2F"> Ensuring good text quality in African Language Datasets </a> at the AI4D Africa Webinar Series: Making NLP work in Africa – with an introduction to the GIZ AI4D African Language Dataset Challenge </p>
+<p> - Apr 26, 2020 <a target="_blank" href="https://slideslive.com/38926599/improving-yoruba-diacritic-restoration"> Improving Yorùbá Diacritic Restoration </a> at the AfricaNLP Workshop  @ICLR 2020 </p>
+<p> - Apr 26, 2020 <a target="_blank" href="https://slideslive.com/38926600/distant-supervision-and-noisy-label-learning-for-low-resource-named-entity-recognition-a-study-on-hausa-and-yoruba"> Distant Supervision and Noisy Label Learning for Low Resource Named Entity Recognition: A Study on Hausa and Yorùbá   </a> at the AfricaNLP Workshop  @ICLR 2020 </p>
