--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -3,3 +3,5 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
+
+*  <a target="_blank"  href="https://sites.google.com/view/comp598-002-mrl/home">COMP 598-002: Multilingual Representation Learning </a>
