--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -3,6 +3,11 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
+
+At McGill
+======
+
 * [COMP 598-002:Multilingual Representation Learning](https://sites.google.com/view/comp598-002-mrl/home)
 
 * COMP 550: Natural Language Processing (with [Prof Jackie C.K. Cheung](https://www.cs.mcgill.ca/~jcheung/))
+
