--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,8 +5,9 @@ author_profile: true
 ---
 
 
-
-<p> - Dec 03, 2022 <a target="_blank" href="https://neurips.cc/virtual/2022/workshop/50006#wse-detail-56285"> Cross-lingual Transfer for Named Entity Recognition: A study on African Languages 
+<p> - Dec 03, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=LoVhdsAObBk"> NLP for under-resourced African languages (Cohere video)
+ </a> at CMU, Cohere, McGill, Google DeepMind. <a target="_blank" href="https://drive.google.com/file/d/1BdGK1p4P9c_OvJMYwTypRzoBvRq7KOVS/view?usp=sharing"> Slides PDF </a></p>
+<p> - Dec 03, 2022 <a target="_blank" href="https://nips.cc/virtual/2022/workshop/50006"> Cross-lingual Transfer for Named Entity Recognition: A study on African Languages 
  </a> at the TL4NLP Workshop @NeurIPS 2022 (Invited talk) </p>
 <p> - Jul 14, 2022 <a target="_blank" href="https://youtu.be/O5hkG9LGy0U?t=5396"> Multilingual Language Model Adaptive Fine-Tuning: A Study on African Languages
  </a> at the Deeplo Workshop @NAACL 2022 (Invited talk) </p>
