--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,7 +4,29 @@ permalink: /talks/
 author_profile: true
 ---
 
+<p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages (Cohere video)
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
+<p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages (Cohere video)
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
+<p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages (Cohere video)
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
+<p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages (Cohere video)
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
+<p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages (Cohere video)
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
+<p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages (Cohere video)
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
+<p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages (Cohere video)
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
+<p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages (Cohere video)
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
+<p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages (Cohere video)
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
 
+<p> - Apr 06, 2023 <a target="_blank" href="https://drive.google.com/file/d/16RDyub5ZPTzoIoJns2dCqq7mRQId4gYx/view?usp=sharing"> MasakhaNEWS: News Topic Classification for African languages (Area Chair Award)
+ </a> at IJCNLP-AACL, Bali </p>
+<p> - Apr 30, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages 
+ </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
 <p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=LoVhdsAObBk"> NLP for under-resourced African languages (Cohere video)
  </a> at CMU, Cohere, McGill, Google DeepMind. <a target="_blank" href="https://drive.google.com/file/d/1BdGK1p4P9c_OvJMYwTypRzoBvRq7KOVS/view?usp=sharing"> Slides PDF </a></p>
 <p> - Dec 03, 2022 <a target="_blank" href="https://nips.cc/virtual/2022/workshop/50006"> Cross-lingual Transfer for Named Entity Recognition: A study on African Languages 
