--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,15 +4,16 @@ permalink: /talks/
 author_profile: true
 ---
 
-<p> - Nov 03, 2023 <a target="_blank" href="https://drive.google.com/file/d/16RDyub5ZPTzoIoJns2dCqq7mRQId4gYx/view?usp=sharing"> MasakhaNEWS: News Topic Classification for African languages (Area Chair Award)
- </a> at IJCNLP-AACL, Bali </p>
-<p> - Nov 03, 2023 <a target="_blank" href="https://drive.google.com/file/d/16RDyub5ZPTzoIoJns2dCqq7mRQId4gYx/view?usp=sharing"> MasakhaNEWS: News Topic Classification for African languages (Area Chair Award)
- </a> at IJCNLP-AACL, Bali </p>
-<p> - May 04, 2024 <a target="_blank" href="https://drive.google.com/file/d/1gYLmvt5YLZMzjVI6g2Hghkf9zOsmcKFq/view?usp=sharing"> Natural Language Processing for Under-resourced African Languages
- </a> at ACAL 2024, Montreal </p>
+<p> - Feb 26, 2025 <a target="_blank" href="https://drive.google.com/file/d/1WniDhvJCChEwNEGSiWtywmYw_bPKGVPT/view?usp=sharing"> Natural Language Processing for Under-resourced African Languages: The challenges
+ </a> at AIStellars PAIDeF, Nigeria </p>
+
+<p> - Dec 05, 2024 <a target="_blank" href="https://drive.google.com/file/d/1KmZu_NaTp3c-fqRX6f0vgjp_BbfkfUKa/view?usp=sharing"> Developing Language Technologies for African and Creole languages
+ </a> at Bellairs, Barbados 50th Anniversary </p>
 
 <p> - May 3, 2024 <a target="_blank" href="https://www.youtube.com/watch?v=0QfdsEIpmHk&t"> How good are Large Language Models on African Languages?
  </a> at EAAMO_MD4SDG <a target="_blank" href="https://drive.google.com/file/d/1Z9vCbotBDOnxtZx4bjLGTgzZoGnWOqVd/view?usp=sharing"> Slides PDF </a></p>
+<p> - Mar 19, 2024 <a target="_blank" href="https://drive.google.com/file/d/1bcfs-xxQnbHFvHhl_d-QddgQp-FUDgAv/view?usp=sharing"> MasakhaNEWS: SIB-200: A Simple, Inclusive, and Big Evaluation Dataset for Topic Classification in 200+ Languages and Dialects
+ </a> at EACL 2024, Malta </p>
 <p> - Nov 03, 2023 <a target="_blank" href="https://drive.google.com/file/d/16RDyub5ZPTzoIoJns2dCqq7mRQId4gYx/view?usp=sharing"> MasakhaNEWS: News Topic Classification for African languages (Area Chair Award)
  </a> at IJCNLP-AACL, Bali </p>
 <p> - Nov 01, 2023 <a target="_blank" href="https://drive.google.com/file/d/1bMVGYm3xfsm2XuXLN8gYvWbFmtzc0ORw/view?usp=sharing"> Social NLP for low-resource languages
