--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,6 +4,21 @@ permalink: /talks/
 author_profile: true
 ---
 
+<p> - Oct 10, 2025 <a target="_blank" href="https://drive.google.com/file/d/18-SRyHbjlbNXBVYytnJGWIgndNQg9eQ1/view?usp=sharing"> Text quality Issues and their Impact on NLP for Low-Resource Languages
+ </a> at WMDQS Workshop at COLM 2025 </p>
+
+<p> - Jul 29, 2025 <a target="_blank" href="https://drive.google.com/file/d/1O4g3iiBykRWCiCe8tFg5TofvushzVPTo/view?usp=sharing"> INJONGO: A Multicultural Intent Detection and Slot-filling Dataset for 16 African Languages
+ </a> at ACL 2025, Vienna </p>
+
+<p> - Jun 19, 2025 <a target="_blank" href="https://drive.google.com/file/d/1BX_UqMbwXpqA0fk5r1fjN6i9LILAMQ-l/view?usp=sharing"> Scaling Multilingual Evaluation of LLMs to Many Languages
+ </a> at AICan 2025 </p>
+
+<p> - May 04, 2025 <a target="_blank" href="https://drive.google.com/file/d/1ravdpKQkXWtzCRbewDvsHzddckZw8mzF/view?usp=sharing"> Scaling Multilingual Evaluation of LLMs to Many Languages
+ </a> at LM4UC Workshop at NAACL 2025, Bloomberg, AI Summer School_Morocco, and Princeton </p>
+
+<p> - April 29, 2025 <a target="_blank" href="https://drive.google.com/file/d/1rPfsc5lbKwFTe8zzilo3F9Lyiq5-p-D9/view?usp=sharing"> IrokoBench: A New Benchmark for African Languages in the Age of Large Language Models (Outstanding Paper)
+ </a> at NAACL 2025, New Mexico </p>
+
 <p> - Feb 26, 2025 <a target="_blank" href="https://drive.google.com/file/d/1WniDhvJCChEwNEGSiWtywmYw_bPKGVPT/view?usp=sharing"> Natural Language Processing for Under-resourced African Languages: The challenges
  </a> at AIStellars PAIDeF, Nigeria </p>
 
