--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -27,7 +27,7 @@ author_profile: true
 
 <p> - May 3, 2024 <a target="_blank" href="https://www.youtube.com/watch?v=0QfdsEIpmHk&t"> How good are Large Language Models on African Languages?
  </a> at EAAMO_MD4SDG <a target="_blank" href="https://drive.google.com/file/d/1Z9vCbotBDOnxtZx4bjLGTgzZoGnWOqVd/view?usp=sharing"> Slides PDF </a></p>
-<p> - Mar 19, 2024 <a target="_blank" href="https://drive.google.com/file/d/1bcfs-xxQnbHFvHhl_d-QddgQp-FUDgAv/view?usp=sharing"> MasakhaNEWS: SIB-200: A Simple, Inclusive, and Big Evaluation Dataset for Topic Classification in 200+ Languages and Dialects
+<p> - Mar 19, 2024 <a target="_blank" href="https://drive.google.com/file/d/1bcfs-xxQnbHFvHhl_d-QddgQp-FUDgAv/view?usp=sharing"> SIB-200: A Simple, Inclusive, and Big Evaluation Dataset for Topic Classification in 200+ Languages and Dialects
  </a> at EACL 2024, Malta </p>
 <p> - Nov 03, 2023 <a target="_blank" href="https://drive.google.com/file/d/16RDyub5ZPTzoIoJns2dCqq7mRQId4gYx/view?usp=sharing"> MasakhaNEWS: News Topic Classification for African languages (Area Chair Award)
  </a> at IJCNLP-AACL, Bali </p>
@@ -36,7 +36,7 @@ author_profile: true
 <p> - Jul, 11 2023 <a target="_blank" href="https://docs.google.com/presentation/d/1v_X5S3Z4HRpznz7QIW2l6UYo7vMSEM6YceBDgChk27A/edit?usp=sharing"> MasakhaPOS: Part-of-Speech Tagging for Typologically Diverse African languages
  </a> at ACL, Toronto </p>
 <p> - Jun, 27 2023 <a target="_blank" href="https://drive.google.com/file/d/1PPoTCibNbHRv30VHbRZQf5-DpKyuf4Np/view?usp=sharing"> Natural language processing for African languages
- </a> at Saarbrueken </p>
+ </a> PhD Thesis at Saarbrueken </p>
 <p> - Apr 30, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=IxbSLFgrdpo"> NLP for under-resourced African languages 
  </a> at AI Saturday Lagos. <a target="_blank" href="https://drive.google.com/file/d/1ZdzIhdAeTBbyU5mCIFu3XodSLVvrENf7/view?usp=sharing"> Slides PDF </a></p>
 <p> - Apr 06, 2023 <a target="_blank" href="https://www.youtube.com/watch?v=LoVhdsAObBk"> NLP for under-resourced African languages (Cohere video)
