--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -14,7 +14,7 @@ author_profile: true
  </a> at AICan 2025 </p>
 
 <p> - May 04, 2025 <a target="_blank" href="https://drive.google.com/file/d/1ravdpKQkXWtzCRbewDvsHzddckZw8mzF/view?usp=sharing"> Scaling Multilingual Evaluation of LLMs to Many Languages
- </a> at LM4UC Workshop at NAACL 2025, Bloomberg, AI Summer School_Morocco, and Princeton </p>
+ </a> at LM4UC Workshop at NAACL 2025, Bloomberg, AI Summer School Morocco, and Princeton </p>
 
 <p> - April 29, 2025 <a target="_blank" href="https://drive.google.com/file/d/1rPfsc5lbKwFTe8zzilo3F9Lyiq5-p-D9/view?usp=sharing"> IrokoBench: A New Benchmark for African Languages in the Age of Large Language Models (Outstanding Paper)
  </a> at NAACL 2025, New Mexico </p>
